<?xml version="1.0" encoding="utf-8"?><!--确认弹窗-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_corner4"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_confirm_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_10"
        android:textSize="@dimen/sp_24"
        tools:text="@string/title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#999999" />

    <TextView
        android:id="@+id/tv_confirm_dialog_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/dp_15"
        android:paddingHorizontal="@dimen/dp_10"
        android:text="@string/message"
        tools:textSize="@dimen/sp_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_confirm_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_36"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#808080"
            android:textSize="@dimen/sp_24"
            android:visibility="gone" />

        <TextView
            android:id="@+id/bt_confirm_dialog_ok"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_36"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/dp_20"
            android:layout_weight="1"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="#30BFFF"
            android:textSize="@dimen/sp_24" />
    </LinearLayout>

</LinearLayout>