<?xml version="1.0" encoding="utf-8"?><!--模型列表item-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dp_80"
    android:layout_height="@dimen/dp_80"
    android:layout_margin="@dimen/dp_10"
    app:cardCornerRadius="@dimen/dp_20"
    app:cardElevation="@dimen/dp_0">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_mould_training"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:alpha="0.5"
            android:foreground="#9e6fcf"
            android:gravity="center"
            android:text="@string/training"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_20"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/ll_mould_bg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#4ec4c1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mould_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/dad"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_22" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sound"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_mould_using"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#894ec4"
            android:gravity="center"
            android:text="@string/using"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

</androidx.cardview.widget.CardView>